--- a/.config/gtk-4.0/settings.ini
+++ b/.config/gtk-4.0/settings.ini
@@ -1,4 +1,7 @@
 [Settings]
-gtk-theme-name = Orchis
-gtk-icon-theme-name = Papirus-Dark
-gtk-font-name = Noto Sans 12
+gtk-theme-name=Orchis-Dark
+gtk-icon-theme-name=Adwaita
+gtk-font-name=Adwaita Sans 12
+gtk-cursor-theme-name=default
+gtk-cursor-theme-size=32
+gtk-application-prefer-dark-theme=0
