waybar docker desktop window

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -94,7 +94,8 @@
         "jetbrains-phpstorm": " PhpStorm",
         "eclipse": " Eclipse",
         "netbeans": " NetBeans",
-        "docker": "  Docker",
+        "docker": " Docker",
+        "Docker Desktop": " Docker Desktop",
         "vim": " Vim",
         "neovim": " Neovim",
         "neovide": " Neovide",
