--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -1,13 +1,13 @@
 # Transparent windows
-# windowrule=opacity 0.9 0.9,class:^(obsidian)$
-# windowrule=opacity 0.8 0.8,class:^(steam_proton|Spotify|com.github.th_ch.youtube_music|VSCodium|Code|nemo)$
-# windowrule=opacity 0.8 0.8,class:^(Alacritty|kitty|com.mitchellh.ghostty)$
+windowrule=opacity 0.9 0.9,class:^(obsidian)$
+windowrule=opacity 0.8 0.8,class:^(steam_proton|Spotify|com.github.th_ch.youtube_music|VSCodium|Code|nemo)$
+windowrule=opacity 0.9 0.9,class:^(Alacritty|kitty|com.mitchellh.ghostty)$
 
 # Transparent window exceptions
-# windowrule=opacity 1 1,class:^(firefox|zen)$,title:^(.*YouTube.*)$
-# windowrule=opacity 1 1,class:^(firefox|zen)$,title:^(.*Twitch.*)$
-# -----
+windowrule=opacity 1 1,class:^(firefox|zen)$,title:^(.*YouTube.*)$
+windowrule=opacity 1 1,class:^(firefox|zen)$,title:^(.*Twitch.*)$
 
+# xwayland
 windowrule = suppressevent maximize, class:.*
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
