docker desktop startup

--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -10,7 +10,7 @@ exec-once = udiskie &
 
 exec-once = swww-daemon
 exec-once = swayosd-server
-exec-once = swaync
+exec-once = swaync &
 exec-once = waybar &
 
 exec-once = bluetoothctl power off
@@ -18,6 +18,7 @@ exec-once = powerprofilesctl set performance # TODO: Change with `powerprofilesc
 # TODO: Also add the brightness to 20% when laptop on the go `brightnessctl set 20%`
 
 exec-once = [workspace 2 silent] $browser
+exec-once = [workspace 4 silent] systemctl --user start docker-desktop 
 exec-once = [workspace 7 silent] $fileManager
 exec-once = [workspace 8 silent] obsidian
 exec-once = [workspace 9 silent] discord
