--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -1,5 +1,4 @@
-$fileManager = nemo
-$browser = zen-browser
+monitor=,preferred,auto,auto
 
 exec-once = hyprpm reload -n
 
@@ -14,16 +13,3 @@ exec-once = swaync &
 exec-once = waybar &
 
 exec-once = bluetoothctl power off
-exec-once = powerprofilesctl set performance # TODO: Change with `powerprofilesctl set power-saver` if laptop on the go
-# TODO: Also add the brightness to 20% when laptop on the go `brightnessctl set 20%`
-
-exec-once = [workspace 2 silent] $browser
-exec-once = [workspace 4 silent] systemctl --user start docker-desktop 
-exec-once = [workspace 7 silent] $fileManager
-exec-once = [workspace 8 silent] obsidian
-exec-once = [workspace 9 silent] discord
-exec-once = [workspace 10 silent] youtube-music
-# "[workspace 10 silent] ${lib.getExe rmpc-media-session}"
-
-exec-once = hyprctl dispatch workspace 8
-exec-once = hyprctl dispatch workspace 1
