--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,12 +1,9 @@
-# plugin = /usr/lib/libhy3.so
-
 source = ~/.config/hypr/environment.conf
 source = ~/.config/hypr/autostart.conf
-source = ~/.config/hypr/monitors.conf
 source = ~/.config/hypr/hy3.conf
 source = ~/.config/hypr/keybinds.conf
 source = ~/.config/hypr/windowrules.conf
-source = ~/.config/hypr/workspaces.conf
 source = ~/.config/hypr/variables.conf
 source = ~/.config/hypr/devices.conf
-source = ~/.config/hypr/layerrules.conf
+
+source = ~/.config/hypr/profiles/default.conf
