--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -18,13 +18,13 @@ bind = $mainMod, R, exec, $launcher
 bind = $mainMod, T, exec, $terminal # TODO: Tmux attach script
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, N, exec, swaync-client -t -sw
-# "$mainMod, X, exec, ${wlogout-launcher}"
-# "$mainMod, C, exec, ${hyprpicker} --autocopy"
+bind = $mainMod, C, exec, hyprpicker --autocopy
 # bind = $mainMod, Z, exec, $scripts/zen
 # bind = $mainMod, C, exec, $scripts/theme-change
 # bind = $mainMod, W, exec, $scripts/theme-reload
-# bind = $mainMod, X, exec, $scripts/theme-wlogout
-# bind = $mainMod, F1, exec, bluetoothctl power off
+bind = $mainMod, X, exec, $scripts/theme-wlogout
+
+bind = $mainMod, F1, exec, bluetoothctl power off
 # bind = $mainMod, F2, exec, $scripts/script-aliases/bt-audio
 # bind = $mainMod, F3, exec, $scripts/script-aliases/routine
 
