--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -1,15 +1,5 @@
-# Transparent windows
-windowrule=opacity 0.9 0.9,class:^(obsidian)$
-windowrule=opacity 0.8 0.8,class:^(steam_proton|Spotify|com.github.th_ch.youtube_music|VSCodium|Code|nemo)$
-windowrule=opacity 0.9 0.9,class:^(Alacritty|kitty|com.mitchellh.ghostty)$
-
-# Transparent window exceptions
-windowrule=opacity 1 1,class:^(firefox|zen)$,title:^(.*YouTube.*)$
-windowrule=opacity 1 1,class:^(firefox|zen)$,title:^(.*Twitch.*)$
-
-# xwayland
-windowrule = suppressevent maximize, class:.*
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+# Quality of life
+windowrule=suppressevent maximize, class:.*
 
 # Float to tile window
 windowrule=tile,class:^(steam_proton)$
@@ -20,6 +10,7 @@ windowrule=float,class:^(firefox|zen|zen-beta)$,title:^(Picture-in-Picture)$
 windowrule=pin,class:^(firefox|zen|zen-beta)$,title:^(Picture-in-Picture)$
 
 # xwaylandvideobridge rules
+windowrule=nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 windowrule=opacity 0.0 override, class:^(xwaylandvideobridge)$
 windowrule=noanim, class:^(xwaylandvideobridge)$
 windowrule=noinitialfocus, class:^(xwaylandvideobridge)$
@@ -27,6 +18,7 @@ windowrule=maxsize 1 1, class:^(xwaylandvideobridge)$
 windowrule=noblur, class:^(xwaylandvideobridge)$
 
 # Default workspaces
+# TODO: Re-think default workspaces
 windowrule=workspace 1, class:^(com.mitchellh.ghostty)$
 windowrule=workspace 2, class:^(firefox|zen|zen-beta)$
 windowrule=workspace 3, class:^(zoom)$
