hyprland workspace defaults

--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -18,14 +18,13 @@ windowrule=maxsize 1 1, class:^(xwaylandvideobridge)$
 windowrule=noblur, class:^(xwaylandvideobridge)$
 
 # Default workspaces
-# TODO: Re-think default workspaces
-windowrule=workspace 1, class:^(com.mitchellh.ghostty)$
-windowrule=workspace 2, class:^(firefox|zen|zen-beta)$
-windowrule=workspace 3, class:^(zoom)$
-windowrule=workspace 4, class:^(vlc|com.stremio.stremio)$
-windowrule=workspace 5, class:^(jetbrains-toolbox|jetbrains-idea|jetbrains-pycharm|jetbrains-studio)$
-
+windowrule=workspace 1, class:^(jetbrains-toolbox|jetbrains-idea|jetbrains-pycharm|jetbrains-studio)$
+windowrule=workspace 2, class:^(firefox|zen)$
+windowrule=workspace 3, class:^(vlc|com.stremio.stremio|org.qbittorrent.qBittorrent)$
+windowrule=workspace 4, class:^(zoom)$
+windowrule=workspace 5, class:^(Docker\ Desktop)$
 windowrule=workspace 6, class:^(pavucontrol)$
+
 windowrule=workspace 7, class:^(nemo)$
 windowrule=workspace 8, class:^(obsidian)$
 windowrule=workspace 9, class:^(discord|whatsie)$
