--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 .config/fish/fish_variables
 
 .config/cava/shaders
+.config/ncspot/userstate.cbor
 
 .config/gtk-4.0/assets
 .config/gtk-4.0/gtk-dark.css
