--- a/.config/xsettingsd/xsettingsd.conf
+++ b/.config/xsettingsd/xsettingsd.conf
@@ -1,5 +1,5 @@
 Net/ThemeName "Orchis-Dark"
-Net/IconThemeName "Adwaita"
+Net/IconThemeName "kora"
 Gtk/CursorThemeName "default"
 Net/EnableEventSounds 1
 EnableInputFeedbackSounds 0
