--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -5,6 +5,7 @@ exec-once = hyprpm reload -n
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
+exec-once = nm-applet --indicator &
 exec-once = udiskie &
 
 exec-once = swww-daemon
