waybar blueman window

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -59,6 +59,7 @@
         "com.github.wwmm.easyeffects": " Easy Effects",
         "org.pulseaudio.pavucontrol": "󰓃 Volume Control",
         ".blueman-manager-wrapped": "󰂳 Bluetooth Manager",
+        "blueman-manager": "󰂳 Bluetooth Manager",
         "zen": " Zen Browser",
         "zen-beta": " Zen Browser",
         "opera": " Opera",
