--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -1,11 +1,12 @@
 $mainMod = SUPER
 
-$browser = zen-browser
+$scripts = ~/scripts
+
 $fileManager = nemo
-$terminal = ghostty
+$browser = zen-browser
 $launcher = rofi -show drun
 
-$scripts = ~/scripts
+$terminal = $scripts/ghostty-tmux-attach
 
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, S, togglesplit,
@@ -15,19 +16,17 @@ bind = $mainMod, O, hy3:changegroup, toggletab
 
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, R, exec, $launcher
-bind = $mainMod, T, exec, $terminal # TODO: Tmux attach script
+bind = $mainMod, T, exec, $terminal
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, N, exec, swaync-client -t -sw
 bind = $mainMod, C, exec, hyprpicker --autocopy
-# bind = $mainMod, Z, exec, $scripts/zen
+bind = $mainMod, Z, exec, $scripts/zen-mode
 # bind = $mainMod, C, exec, $scripts/theme-change
 # bind = $mainMod, W, exec, $scripts/theme-reload
 bind = $mainMod, X, exec, $scripts/theme-wlogout
+bind = $mainMod, M, exec, $scripts/rmpc-tmux-session
 
 bind = $mainMod, F1, exec, bluetoothctl power off
-# bind = $mainMod, F2, exec, $scripts/script-aliases/bt-audio
-# bind = $mainMod, F3, exec, $scripts/script-aliases/routine
-
 
 # Hyprshot: Screenshots
 bind = , PRINT, exec, hyprshot -m output
