--- a/.config/hypr/profiles/work.conf
+++ b/.config/hypr/profiles/work.conf
@@ -1,30 +1,32 @@
-$laptop_monitor=eDP-1
-$primary_monitor=HDMI-A-1
-$secondary_monitor=DP-1
+$laptop_monitor = eDP-1
+$primary_monitor = HDMI-A-1
+$secondary_monitor = DP-1
+
+$scripts = ~/scripts
 
 $fileManager = nemo
 $browser = zen-browser
 
 env = AQ_DRM_DEVICES,/dev/dri/card0:/dev/dri/card1
 
-monitor=$laptop_monitor,disable
-monitor=$primary_monitor,1920x1080@165,0x0,1
-monitor=$secondary_monitor,1366x768@60,-768x0,1,transform,1
+monitor = $laptop_monitor,disable
+monitor = $primary_monitor,1920x1080@165,0x0,1
+monitor = $secondary_monitor,1366x768@60,-768x0,1,transform,1
 
-workspace=1,monitor:$primary_monitor,default:true
-workspace=2,monitor:$primary_monitor,default:true
-workspace=3,monitor:$primary_monitor,default:true
-workspace=4,monitor:$primary_monitor,default:true
-workspace=5,monitor:$primary_monitor,default:true
-workspace=6,monitor:$primary_monitor,default:true
-workspace=7,monitor:$secondary_monitor,rounding:false,gapsin:0,gapsout:0
-workspace=8,monitor:$secondary_monitor,rounding:false,gapsin:0,gapsout:0
-workspace=9,monitor:$secondary_monitor,rounding:false,gapsin:0,gapsout:0
-workspace=10,monitor:$secondary_monitor,rounding:false,gapsin:0,gapsout:0
+workspace = 1,monitor:$primary_monitor,default:true
+workspace = 2,monitor:$primary_monitor,default:true
+workspace = 3,monitor:$primary_monitor,default:true
+workspace = 4,monitor:$primary_monitor,default:true
+workspace = 5,monitor:$primary_monitor,default:true
+workspace = 6,monitor:$primary_monitor,default:true
+workspace = 7,monitor:$secondary_monitor,rounding:false,gapsin:0,gapsout:0
+workspace = 8,monitor:$secondary_monitor,rounding:false,gapsin:0,gapsout:0
+workspace = 9,monitor:$secondary_monitor,rounding:false,gapsin:0,gapsout:0
+workspace = 10,monitor:$secondary_monitor,rounding:false,gapsin:0,gapsout:0
 
-windowrule=opacity 0.9 0.9,class:^(obsidian)$
-windowrule=opacity 0.8 0.8,class:^(steam_proton|Spotify|com.github.th_ch.youtube_music|VSCodium|Code|nemo)$
-windowrule=opacity 0.9 0.9,class:^(Alacritty|kitty|com.mitchellh.ghostty)$
+windowrule = opacity 0.9 0.9,class:^(obsidian)$
+windowrule = opacity 0.8 0.8,class:^(steam_proton|Spotify|com.github.th_ch.youtube_music|VSCodium|Code|nemo)$
+windowrule = opacity 0.9 0.9,class:^(Alacritty|kitty|com.mitchellh.ghostty)$
 
 layerrule = blur, swaync-control-center
 layerrule = blur, swaync-notification-window
@@ -40,7 +42,7 @@ exec-once = [workspace 7 silent] $fileManager
 exec-once = [workspace 8 silent] obsidian
 exec-once = [workspace 9 silent] discord
 exec-once = [workspace 10 silent] youtube-music
-# "[workspace 10 silent] ${lib.getExe rmpc-media-session}"
+exec-once = [workspace 10 silent] $scripts/rmpc-tmux-session
 
 exec-once = hyprctl dispatch workspace 8
 exec-once = hyprctl dispatch workspace 1
