hyprland qt settings

--- a/.config/hypr/environment.conf
+++ b/.config/hypr/environment.conf
@@ -10,8 +10,10 @@ env = XDG_SESSION_DESKTOP,Hyprland
 
 env = GSK_RENDERER,ngl
 env = GDK_BACKEND,wayland
-env = QT_QPA_PLATFORM,wayland;xcb
 env = CLUTTER_BACKEND,wayland
+env = QT_QPA_PLATFORM,wayland;xcb
+env = QT_QPA_PLATFORMTHEME,qt5ct
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 
 env = NVD_BACKEND,direct
 env = LIBVA_DRIVER_NAME,nvidia
