--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -1,4 +1,9 @@
-music_directory "/run/media/daniel/EXTERNAL/Media/Music"
+music_directory "~/Music/tracks"
+playlist_directory "~/Music/playlists"
+state_file "~/.local/state/mpd/state"
+db_file "~/.mpd/database"
+sticker_file "~/.mpd/sticker.sql"
+auto_update "yes"
 
 audio_output {
   type "pipewire"
