uwsm. Refactored hyprland config

--- a/.config/hypr/profiles/on-the-go.conf
+++ b/.config/hypr/profiles/on-the-go.conf
@@ -1,4 +1,5 @@
-env = AQ_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0
+# WARNING: Moving to uwsm
+# env = AQ_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0
 
 exec-once = powerprofilesctl set power-saver
 exec-once = brightnessctl set 20%
