--- a/.config/hypr/profiles/work.conf
+++ b/.config/hypr/profiles/work.conf
@@ -7,7 +7,8 @@ $scripts = ~/scripts
 $fileManager = nemo
 $browser = zen-browser
 
-env = AQ_DRM_DEVICES,/dev/dri/card0:/dev/dri/card1
+# WARNING: Moving to uwsm
+# env = AQ_DRM_DEVICES,/dev/dri/card0:/dev/dri/card1
 
 monitor = $laptop_monitor,disable
 monitor = $primary_monitor,1920x1080@165,0x0,1
@@ -36,12 +37,12 @@ layerrule = ignorealpha 0.5, swaync-control-center
 layerrule = ignorealpha 0.5, swaync-notification-window
 
 exec-once = powerprofilesctl set performance
-exec-once = [workspace 2 silent] $browser
+exec-once = [workspace 2 silent] uwsm app -- $browser
 exec-once = [workspace 6 silent] systemctl --user start docker-desktop 
-exec-once = [workspace 7 silent] $fileManager
-exec-once = [workspace 8 silent] obsidian
-exec-once = [workspace 9 silent] discord
-exec-once = [workspace 10 silent] youtube-music
+exec-once = [workspace 7 silent] uwsm app -- $fileManager
+exec-once = [workspace 8 silent] uwsm app -- obsidian
+exec-once = [workspace 9 silent] uwsm app -- discord
+exec-once = [workspace 10 silent] uwsm app -- youtube-music
 exec-once = [workspace 10 silent] $scripts/rmpc-tmux-session
 
 exec-once = hyprctl dispatch workspace 8
