--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -1,13 +1,13 @@
 exec-once = hyprpm reload -n
 
-exec-once = wl-paste --type text --watch cliphist store
-exec-once = wl-paste --type image --watch cliphist store
-exec-once = nm-applet --indicator &
-exec-once = udiskie &
+exec-once = uwsm app -- wl-paste --type text --watch cliphist store
+exec-once = uwsm app -- wl-paste --type image --watch cliphist store
+exec-once = uwsm app -- nm-applet --indicator &
+exec-once = uwsm app -- udiskie &
 
-exec-once = swww-daemon
-exec-once = swayosd-server
-exec-once = swaync &
-exec-once = waybar &
+exec-once = uwsm app -- swww-daemon
+exec-once = uwsm app -- swayosd-server
+exec-once = uwsm app -- swaync &
+exec-once = uwsm app -- waybar &
 
 exec-once = bluetoothctl power off
