hyprlock dynamic background

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -3,9 +3,7 @@ general {
 }
 
 background {
-  # TODO: Making a script that will replace the new wallpaper into `~/.cache/wal/wallpaper.png`
-  # path = ~/.cache/wal/wallpaper.png
-  path = ~/Pictures/wallpapers/hollow_knight.png
+  path = ~/.cache/wal/wallpaper.png
   blur_passes = 2
 }
 
