--- a/.config/wpg/wpg.conf
+++ b/.config/wpg/wpg.conf
@@ -1,5 +1,5 @@
 [settings]
-set_wallpaper = true
+set_wallpaper = false
 gtk = true
 active = 0
 light_theme = false
@@ -12,5 +12,7 @@ smart_sort = true
 auto_adjust = false
 reload = true
 terminal = true
+keywords = default
 
 [keywords]
+
