waybar wpgtk window

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -55,6 +55,7 @@
         "via-nativia": "󰧹 Via",
         "qt5ct": " Qt5 Settings",
         "qt6ct": " Qt6 Settings",
+        "wpg": "󰋪 Wpgtk",
         "nvidia-settings": " Nvidia Settings",
         "com.github.wwmm.easyeffects": " Easy Effects",
         "org.pulseaudio.pavucontrol": "󰓃 Volume Control",
