--- a/.config/hypr/profiles/work.conf
+++ b/.config/hypr/profiles/work.conf
@@ -38,6 +38,7 @@ layerrule = ignorealpha 0.5, swaync-notification-window
 
 exec-once = powerprofilesctl set performance
 exec-once = [workspace 2 silent] uwsm app -- $browser
+exec-once = [workspace 3 silent] uwsm app -- qbittorrent
 exec-once = [workspace 6 silent] systemctl --user start docker-desktop 
 exec-once = [workspace 7 silent] uwsm app -- $fileManager
 exec-once = [workspace 8 silent] uwsm app -- obsidian
