--- a/.config/systemd/user/tmux.service
+++ b/.config/systemd/user/tmux.service
@@ -7,7 +7,7 @@ Type=forking
 Environment=DISPLAY=:0
 ExecStart=/usr/bin/tmux new-session -d
 
-ExecStop=/home/daniel/.config/tmux/plugins/tmux-resurrect/scripts/save.sh && /usr/bin/tmux kill-server
+ExecStop=/usr/bin/tmux kill-server
 KillMode=control-group
 
 RestartSec=2
