--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -1,9 +1,9 @@
 [Appearance]
-color_scheme_path=/usr/share/qt5ct/colors/waves.conf
-custom_palette=false
+color_scheme_path=/usr/share/qt5ct/colors/darker.conf
+custom_palette=true
 icon_theme=Papirus
 standard_dialogs=default
-style=Fusion
+style=Breeze
 
 [Fonts]
 fixed="Sans Serif,9,-1,5,50,0,0,0,0,0"
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\aC\0\0\x3\xbc\0\0\0\0\0\0\0\0\0\0\x2\xde\0\0\x2\xaa\0\0\0\x1\x2\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\aC\0\0\x3\xbc)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\aC\0\0\x3\xbc\0\0\0\0\0\0\0\0\0\0\x2\xde\0\0\x2\xd8\0\0\0\x1\x2\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\aC\0\0\x3\xbc)
 
 [Troubleshooting]
 force_raster_widgets=1
