qt theme graphite

--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -1,12 +1,12 @@
 [Appearance]
-color_scheme_path=/usr/share/qt5ct/colors/darker.conf
+color_scheme_path=/home/daniel/.config/qt5ct/style-colors.conf
 custom_palette=true
 icon_theme=Papirus
-standard_dialogs=default
-style=Breeze
+standard_dialogs=gtk3
+style=kvantum-dark
 
 [Fonts]
-fixed="Sans Serif,9,-1,5,50,0,0,0,0,0"
+fixed="Noto Serif,12,-1,5,50,0,0,0,0,0"
 general="Noto Sans,12,-1,5,50,0,0,0,0,0"
 
 [Interface]
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\aC\0\0\x3\xbc\0\0\0\0\0\0\0\0\0\0\x2\xde\0\0\x2\xd8\0\0\0\x1\x2\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\aC\0\0\x3\xbc)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\aC\0\0\x3\xbc\0\0\0\0\0\0\0\0\0\0\x2\xde\0\0\x3%\0\0\0\x1\x2\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\aC\0\0\x3\xbc)
 
 [Troubleshooting]
 force_raster_widgets=1
