--- a/.config/qt6ct/qt6ct.conf
+++ b/.config/qt6ct/qt6ct.conf
@@ -1,11 +1,12 @@
 [Appearance]
-custom_palette=false
+color_scheme_path=/home/daniel/.config/qt6ct/style-colors.conf
+custom_palette=true
 icon_theme=Papirus
-standard_dialogs=default
-style=Fusion
+standard_dialogs=gtk3
+style=kvantum-dark
 
 [Fonts]
-fixed="Sans Serif,9,-1,5,400,0,0,0,0,0,0,0,0,0,0,1"
+fixed="Noto Serif,12,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Regular"
 general="Noto Sans,12,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Regular"
 
 [Interface]
