waybar nwg-look window

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -53,6 +53,7 @@
         "qBittorrent$": " QBittorrent",
         "org.qbittorrent.qBittorrent": " QBittorrent",
         "via-nativia": "󰧹 Via",
+        "nwg-look": " Gtk Settings",
         "qt5ct": " Qt5 Settings",
         "qt6ct": " Qt6 Settings",
         "wpg": "󰋪 Wpgtk",
