gtk graphite theme

--- a/.config/xsettingsd/xsettingsd.conf
+++ b/.config/xsettingsd/xsettingsd.conf
@@ -1,4 +1,4 @@
-Net/ThemeName "Orchis-Dark"
+Net/ThemeName "Graphite-Dark"
 Net/IconThemeName "kora"
 Gtk/CursorThemeName "default"
 Net/EnableEventSounds 1
