--- a/.config/gtk-4.0/settings.ini
+++ b/.config/gtk-4.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
-gtk-theme-name=Orchis-Dark
+gtk-theme-name=Graphite-Dark
 gtk-icon-theme-name=kora
-gtk-font-name=Adwaita Sans 12
+gtk-font-name=Noto Sans 12
 gtk-cursor-theme-name=default
 gtk-cursor-theme-size=32
-gtk-application-prefer-dark-theme=0
+gtk-application-prefer-dark-theme=1
