--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -23,9 +23,8 @@ windowrule=workspace 2, class:^(firefox|zen)$
 windowrule=workspace 3, class:^(vlc|com.stremio.stremio|org.qbittorrent.qBittorrent)$
 windowrule=workspace 4, class:^(zoom)$
 windowrule=workspace 5, class:^(Docker\ Desktop)$
-windowrule=workspace 6, class:^(pavucontrol)$
+windowrule=workspace 6, class:^(pavucontrol|com.github.wwmm.easyeffects)$
 
 windowrule=workspace 7, class:^(nemo)$
 windowrule=workspace 8, class:^(obsidian)$
-windowrule=workspace 9, class:^(discord|whatsie)$
-windowrule=workspace 10, class:^(com.github.th_ch.youtube_music|steam_proton|deadbeef)$
+windowrule=workspace 9, class:^(com.github.th_ch.youtube_music|steam_proton|deadbeef)$
