--- a/.config/hypr/monitors.conf
+++ b/.config/hypr/monitors.conf
@@ -1,5 +1,21 @@
-$laptop_monitor=eDP-1
+$laptop_monitor = eDP-1
 
-monitor=,preferred,auto,auto
+monitor = ,preferred,auto,auto
 
-monitor=$laptop_monitor,1920x1080@144,0x0,1
+monitor = $laptop_monitor,1920x1080@144,0x0,1
+
+# Examples
+# Monitor values can be `eDP-1`,`HDMI-A-1` or `DP-1`
+# monitor = <output>,<resolution>,<position>,<scale>
+
+# Regular setup
+# monitor = HDMI-A-1,preferred,auto-left,1
+# monitor = DP-1,preferred,auto-right,1
+
+# Mirror displays
+# monitor = HDMI-A-1,preferred,auto-left,1,mirror,eDP-1
+# monitor = DP-1,preferred,auto-right,1,monitor,eDP-1
+
+# Rotate display [1-7 value]
+# monitor = HDMI-A-1,preferred,auto-left,1,transform,1
+# monitor = DP-1,preferred,auto-right,1,transform,3
