--- a/.config/hypr/profiles/work.conf
+++ b/.config/hypr/profiles/work.conf
@@ -12,7 +12,7 @@ $browser = zen-browser
 
 monitor = $laptop_monitor,disable
 monitor = $primary_monitor,1920x1080@144,0x0,1
-monitor = $secondary_monitor,1366x768@60,-768x0,1,transform,1
+monitor = $secondary_monitor,1366x768@60,auto-left,1,transform,1
 
 workspace = 1,monitor:$primary_monitor,default:true
 workspace = 2,monitor:$primary_monitor,default:true
